tests/fixtures/coflow/invalid/lex/unterminated-block-comment.cf
value = 1
/*
comment
